--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-cayman
+
+title: "DLEdge: Accelerating Deep Neural Networks on the Edge"
+description: Ka-Ho Chow, Ling Liu, Yu-Lin Chung, Quang Huynh, Hung-Yi Li, Sonia Mathew, and Víctor Castro Serrano
+
+show_downloads: True
+
+Ka-Ho Chow
+
+
+
+
